--- a/styles.css
+++ b/styles.css
@@ -95,8 +95,12 @@ a:link, a:visited {
 }
 
 nav.header {
-  float: right;	
-  padding: 20px;
+  float: right;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
 }
 
 nav#header ul li {
